--- a/git_test/Views/Home/Index.cshtml
+++ b/git_test/Views/Home/Index.cshtml
@@ -9,7 +9,7 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                    <img src="../images/logo.png" />
+                    <img src="~/images/logo.png" />
                 </div>
                 <div class="fixed-top-collapse collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                     <ul class="nav navbar-nav navbar-right">
@@ -32,7 +32,7 @@
         </div><!-- /banner-content -->
     </div><!-- /container -->
     <div class="container">
-        <div class="stamp text-center"><img src="../images/stamp.png" /></div>
+        <div class="stamp text-center"><img src="~/images/stamp.png" /></div>
     </div><!-- /container -->
 </div><!-- /banner -->
 <!-- About -->
@@ -67,9 +67,9 @@
             <div class="why-us-img"></div>
         </div>
         <div class="about-gallery col-md-4">
-            <img class="about-gallery-1" src="../images/1.jpg" />
-            <img class="about-gallery-2" src="images/2.jpg" />
-            <img class="about-gallery-2" src="images/3.jpg" />
+            <img class="about-gallery-1" src="~/images/1.jpg" />
+            <img class="about-gallery-2" src="~/images/2.jpg" />
+            <img class="about-gallery-2" src="~/images/3.jpg" />
 
         </div>
     </div>
@@ -82,7 +82,7 @@
 <script>
             $(window).scroll(function() {
             var scroll = $(window).scrollTop();
-            if (scroll >= 700) {
+            if (scroll >= 200) {
                 $(".about").addClass("active");
                 $(".home").removeClass("active");
             }
