Google Fonts, kosmetyka
Podlinkowanie czcionek online, kosmetyczne zmiany porządkujące kod,
pozbycie się 'śmieciowego' contentu. Pozdrawiam :D

--- a/git_test/Views/Home/Index.cshtml
+++ b/git_test/Views/Home/Index.cshtml
@@ -15,9 +15,9 @@
                     <ul class="nav navbar-nav navbar-right">
                         <li class="home active"><a href="#">Home</a></li>
                         <li class="about"><a href="#">About</a></li>
-                        <li class="services"><a href="#">Services</a></li>
-                        <li class="clients"><a href="#">Clients</a></li>
-                        <li class="stats"><a href="#">Stats</a></li>
+                        <li class="services"><a href="#">MobileSwap</a></li>
+                        <li class="clients"><a href="#">Stats</a></li>
+                        <li class="stats"><a href="#">Team</a></li>
                         <li class="contact"><a href="#">Contact</a></li>
                     </ul>
                 </div><!-- /navbar-collapse -->
@@ -27,57 +27,17 @@
 
     <div class="container">
         <div class="banner-content">
-            <h2>Make your businnes great</h2>
-            <p>With Lorem Ipsum </p>
+            <h2>Witaj w SocialSwap!</h2>
+            <p>Wymieniaj się, kolekcjonuj i poznawaj wspaniałych ludzi razem z nami...</p>
         </div><!-- /banner-content -->
     </div><!-- /container -->
     <div class="container">
-        <div class="stamp text-center"><img src="~/images/stamp.png" /></div>
+        <div class="stamp text-center"></div>
     </div><!-- /container -->
 </div><!-- /banner -->
 <!-- About -->
 <div class="about">
-    <div class="container">
-        <div class="blog-post col-md-4">
-            <h2>Recent Blog Posts</h2>
-            <div class="blog-post-img"></div>
-            <div class="blog-post-nav">
-                <span class="glyphicon glyphicon-menu-left"></span>
-                <span class="glyphicon glyphicon-menu-right"></span>
-            </div>
-            <div class="clearfix"></div>
-            <div class="post-header">
-                <h3>A little debate...</h3><span class="quote fa fa-quote-right"></span>
-                <div class="clearfix"></div>
-            </div>
-            <p>
-                Vivamus sit amet enim id tortor sagittis porta vitae nec erat. Vestibulum sit amet mattis eros.
-                Aliquam arcu magna, egestas nec justo id, finibus scelerisque ante.
-            </p>
-        </div>
-        <div class="why-us col-md-4">
-            <h2>Why Us ?</h2>
-            <p>Aliquam rutrum semper consectetur. Nulla quis posuere urna, a hendrerit enim. Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-            <ul>
-                <li>Duis sit amet lectus efficitur</li>
-                <li>Duis in arcu mollis</li>
-                <li>Donec vehicula diam elit</li>
-            </ul>
-            <img src="~/App_Data/images/1.jpg" />
-            <div class="why-us-img"></div>
-        </div>
-        <div class="about-gallery col-md-4">
-            <img class="about-gallery-1" src="~/images/1.jpg" />
-            <img class="about-gallery-2" src="~/images/2.jpg" />
-            <img class="about-gallery-2" src="~/images/3.jpg" />
-
-        </div>
-    </div>
 </div>
-<!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-<!-- Include all compiled plugins (below), or include individual files as needed -->
-<script src="js/bootstrap.min.js"></script>
 
 <script>
             $(window).scroll(function() {
@@ -91,7 +51,7 @@
                 $(".about").removeClass("active");
             }
 
-            if (scroll >=0) {
+            if (scroll >= 0) {
                 $(".nav-script").addClass("navbar-fixed-top");
                 }
             else {
