--- a/git_test/Views/Shared/_Layout.cshtml
+++ b/git_test/Views/Shared/_Layout.cshtml
@@ -1,10 +1,11 @@
 ﻿<!DOCTYPE html>
-<html>
+<html lang="pl">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>@ViewBag.Title — moja aplikacja platformy ASP.NET</title>
+    <title>@ViewBag.Title SocialSwap - platforma wymiany przedmiotów</title>
+    <link href="https://fonts.googleapis.com/css?family=Montserrat+Alternates:200,300,400|Montserrat+Subrayada|Montserrat:700&amp;subset=latin-ext" rel="stylesheet">
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")
 </head>
