--- a/git_test/Content/Site.css
+++ b/git_test/Content/Site.css
@@ -2,13 +2,13 @@
 body {
     background: #fff;
     font-size: 16px;
-    font-family: 'Quicksand', sans-serif;
+    font-family: 'Lato', sans-serif;
 }
 
-    body a {
-        cursor: pointer;
-        text-decoration: none;
-    }
+body a {
+    cursor: pointer;
+    text-decoration: none;
+}
 
 p {
     font-family: 'Dosis', sans-serif;
@@ -24,24 +24,25 @@ ul {
     padding: 0;
     border: none;
 }
+
 /* //MAIN ELEMENTS */
 
 /* NAVIGATION */
 .nav-custom {
-    margin: none;
+    padding-top: 2em;
     border: none;
     height: 80px;
-    background-color: rgba(0, 0, 0, 0.3);
+    background: none
 }
 
 .navbar-header {
     padding-top: 15px;
 }
 
-    .navbar-header img {
-        width: 11em;
-        height: auto;
-    }
+.navbar-header img {
+    width: 11em;
+    height: auto;
+}
 
 .navbar-default .navbar-nav li a {
     color: #fff;
@@ -52,15 +53,10 @@ ul {
     padding-right: 30px;
 }
 
-.navbar-default .navbar-nav .active a {
+.navbar-default .navbar-nav .active a, .navbar-default .navbar-nav .active a:hover {
     background-color: rgba(0, 0, 0, 0.3);
     color: #fff;
 }
-
-    .navbar-default .navbar-nav .active a:hover {
-        background-color: rgba(0, 0, 0, 0.3);
-        color: #fff;
-    }
 
 .navbar-fixed-top > .container > .fixed-top-collapse {
     padding-left: 15px;
@@ -70,7 +66,7 @@ ul {
 
 /* BANNER */
 .banner {
-    background: url('../images/header.jpg');
+    background: url('../images/h4.jpg');
     background-size: cover;
     -webkit-background-size: cover;
     -moz-background-size: cover;
@@ -80,165 +76,55 @@ ul {
     position: relative;
 }
 
-    .banner:before, .banner:after {
-        position: absolute;
-        content: "";
-        bottom: 45px;
-        left: 0;
-        right: auto;
-        top: 80%;
-        width: 100%;
-        background: #000;
-        z-index: -1;
-        -webkit-box-shadow: 0 40px 50px #000;
-        -moz-box-shadow: 0 40px 50px #000;
-        box-shadow: 0 40px 50px #000;
-    }
+.banner:before, .banner:after {
+    position: absolute;
+    content: "";
+    bottom: 45px;
+    left: 0;
+    right: auto;
+    top: 80%;
+    width: 100%;
+    background: #000;
+    z-index: -1;
+    -webkit-box-shadow: 0 40px 50px #000;
+    -moz-box-shadow: 0 40px 50px #000;
+    box-shadow: 0 40px 50px #000;
+}
 
 .banner-content {
     position: absolute;
-    bottom: 17em;
-    left: 0;
-    right: 0;
-    text-align: center;
-    text-transform: uppercase;
+    bottom: 15em;
+    text-align: left;
 }
 
-    .banner-content h2 {
-        color: #fff;
-        font-size: 4em;
-        font-weight: 700;
-        font-family: 'Lato', sans-serif;
-    }
+.banner-content h2 {
+    color: #fff;
+    font-size: 4em;
+    font-weight: 700;
+    font-family: 'Montserrat', sans-serif;
+}
 
-    .banner-content p {
-        font-size: 1.5em;
-        font-weight: 500;
-        color: #0c131a;
-    }
+.banner-content p {
+    font-size: 1.5em;
+    font-weight: 500;
+    color: #fff;
+    font-family: 'Montserrat Alternates', sans-serif;
+}
 
 .stamp {
     position: absolute;
-    bottom: -2.5em;
+    bottom: 0;
     left: 0;
     right: 0;
     margin-left: 0;
     margin-right: 0;
 }
-
-    .stamp img {
-        width: 5em;
-        height: 5em;
-    }
 /* //BANNER */
 
 /* ABOUT */
 .about {
     text-align: center;
-}
-
-    .about .blog-post, .about .why-us, .about .about-gallery {
-        padding-top: 6em;
-        padding-bottom: 6em;
-    }
-
-    .about h2 {
-        font-size: 24px;
-        text-transform: uppercase;
-        padding-bottom: 20px;
-        font-weight: 700;
-    }
-
-.blog-post {
-}
-
-.blog-post-img {
-    background: url(../images/post1.jpg) no-repeat 0px 0px;
-    background-size: contain;
-    height: 140px;
-    width: 60%;
-    margin-left: 70px;
-    margin-right: 10px;
-    float: left;
-}
-
-.blog-post-nav {
-    float: left;
-}
-
-.blog-post h3 {
-    font-size: 24px;
-    font-weight: 700;
-    font-family: 'Josefin Sans', sans-serif;
-    padding-top: 12px;
-    float: left;
-}
-
-.blog-post .quote {
-    margin-top: 20px;
-    float: left;
-}
-
-.blog-post p {
-    font-size: 1em;
-    width: 80%;
-    margin-left: 10%;
-    margin-right: auto;
-}
-
-.post-header {
-    padding-left: 6em;
-}
-
-.why-us {
-}
-
-    .why-us p {
-        width: 90%;
-        margin-left: 5%;
-        margin-right: auto;
-    }
-
-    .why-us ul {
-        margin-right: 40px;
-        margin-top: 2em;
-        margin-bottom: 2em;
-    }
-
-        .why-us ul li::before {
-            content: "\2022";
-            margin-right: 10px;
-        }
-
-        .why-us ul li {
-            font-weight: 700;
-        }
-
-.why-us-img {
-    background: url(../images/logo2.jpg) no-repeat 0px 0px;
-    background-size: contain;
-    height: 5em;
-    width: auto;
-    margin-left: 5em;
-}
-
-.about-gallery {
-}
-
-.about-gallery-1 {
-    height: 9em;
-    width: auto;
-}
-
-.about-gallery-2 {
-    height: 9em;
-    width: auto;
-}
-
-.about-gallery-3 {
-    height: 9em;
-    width: auto;
-}
+}  
 /* //ABOUT */
 
 /* MEDIA QUERIES */
@@ -246,18 +132,6 @@ ul {
 }
 
 @media (max-width: 1079px) {
-    #bar {
-        padding: 1em 0;
-    }
-
-    .row i {
-        font-size: 1em;
-    }
-
-    .row em {
-        font-size: 13px;
-        font-weight: 300;
-    }
 
     .banner {
         min-height: 650px;
@@ -269,26 +143,14 @@ ul {
 }
 
 @media (max-width: 991px) {
-    #bar {
-        padding: 15px 0;
-    }
-
-    .row i {
-        font-size: 15px;
-    }
-
-    .row em {
-        font-size: 12px;
-        font-weight: 200;
-    }
 
     .navbar-header {
         padding-top: 22px;
     }
 
-        .navbar-header img {
+    .navbar-header img {
             width: 8em;
-        }
+    }
 
     .navbar-default .navbar-nav li a {
         color: #fff;
@@ -307,20 +169,20 @@ ul {
         padding: 6.5em 0 0;
     }
 
-        .banner-content h2 {
-            font-size: 3em;
-        }
+    .banner-content h2 {
+        font-size: 3em;
+    }
 
-        .banner-content p {
-            font-size: 20px;
-        }
+    .banner-content p {
+        font-size: 20px;
+    }
 
     .stamp {
         bottom: -2.2em;
     }
 
-        .stamp img {
-            width: 4.4em;
-            height: 4.4em;
-        }
+    .stamp img {
+        width: 4.4em;
+        height: 4.4em;
+    }
 }
