--- a/git_test/Views/Home/Index.cshtml
+++ b/git_test/Views/Home/Index.cshtml
@@ -1,61 +1,161 @@
-﻿<div class="banner">
+﻿<div id="loader"></div>
+<div style="display:none;" id="content" class="animate-bottom">
+    <div class="banner">
+        <div class="container-fluid full-width">
+            <nav class="nav-script nav-custom navbar navbar-default">
+                <div class="container">
+                    <div class="navbar-header navbar-left">
+                        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+                            <span class="sr-only">Toggle navigation</span>
+                            <span class="icon-bar"></span>
+                            <span class="icon-bar"></span>
+                            <span class="icon-bar"></span>
+                        </button>
+                        <img src="../images/logo.png" />
+                    </div>
+                    <div class="fixed-top-collapse collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+                        <ul class="nav navbar-nav navbar-right">
+                            <li class="home active"><a href="#">Home</a></li>
+                            <li class="aboutnav"><a href="#">O nas</a></li>
+                            <li class="services"><a href="#">MobileSwap</a></li>
+                            <li class="clients"><a href="#">Stats</a></li>
+                            <li class="stats"><a href="#">Zespół</a></li>
+                            <li class="contact"><a href="#">Kontakt</a></li>
+                        </ul>
+                    </div><!-- /navbar-collapse -->
+                </div><!-- /container -->
+            </nav>
+            <nav class="unvisible sticky-nav-script sticky-nav-custom navbar navbar-default">
+                <div class="container">
+                    <div class="navbar-header navbar-left">
+                        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+                            <span class="sr-only">Toggle navigation</span>
+                            <span class="icon-bar"></span>
+                            <span class="icon-bar"></span>
+                            <span class="icon-bar"></span>
+                        </button>
+                        <img src="../images/logo.png" />
+                    </div>
+                    <div class="fixed-top-collapse collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+                        <ul class="nav navbar-nav navbar-right">
+                            <li class="home active"><a href="#">Home</a></li>
+                            <li class="aboutnav"><a href="#">O nas</a></li>
+                            <li class="services"><a href="#">MobileSwap</a></li>
+                            <li class="clients"><a href="#">Stats</a></li>
+                            <li class="stats"><a href="#">Zespół</a></li>
+                            <li class="contact"><a href="#">Kontakt</a></li>
+                        </ul>
+                    </div><!-- /navbar-collapse -->
+                </div><!-- /container -->
+            </nav>
+        </div><!-- /container-fluid -->
+
+        <div class="container">
+            <div class="banner-content">
+                <h2>Witaj w SocialSwap!</h2>
+                <p>Wymieniaj się, kolekcjonuj i poznawaj wspaniałych ludzi razem z nami...</p>
+                <a href="~/Views/Account/Register.cshtml"><button class="button"><span>Dołącz do nas!</span></button></a>
+            </div><!-- /banner-content -->
+        </div><!-- /container -->
+        <div class="container">
+            <div class="stamp text-center"></div>
+        </div><!-- /container -->
+    </div><!-- /banner -->
+    <!-- about -->
+    <div class="about1">
+        <div class="about1-image col-md-5"></div>
+        <div class="about1-akapit col-md-7">
+            <h2>Czym jest SocialSwap ?</h2>
+            <p>
+                Masz swoje ukochane Hobby? Chcesz spróbować czegoś nowego i wymienić się swoimi przedmiotami z kimś, kto kocha swoją pasję tak samo jak Ty?
+                <b>SocialSwap to miejsce dla Ciebie ! </b><br /><br />
+                Jesteśmy siecią społecznościową, która skupia hobbystów i pasjonatów z różnych dziedzin. Z nami zamieścisz w sieci ogłoszenie z propozycją wymiany
+                przedmiotów, lub weźmiesz udział w przeróżnych eventach tematycznych, podczas których poznasz ciekawych ludzi, podzielisz się z nimi swoim
+                doświadczeniem, miło spędzisz czas i wymienisz się ciekawymi przedmiotami.<br /><br />
+                <b>Tworzymy społeczność pasjonatów, do której każdy może dołączyć i poznać swoich braci po hobbystycznym fachu. Swapuj z nami już dziś !</b>
+            </p>
+            <button class="button"><span>Dołącz do nas!</span></button>
+        </div>
+    </div>
     <div class="container-fluid full-width">
-        <nav class="nav-script nav-custom navbar navbar-default">
+        <div class="about2">
+            <h2>Jak działa SocialSwap ?</h2>
+            <p>Działamy lokalnie i dbamy o wspólny porządek i satysfakcję</p>
             <div class="container">
-                <div class="navbar-header navbar-left">
-                    <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
-                        <span class="sr-only">Toggle navigation</span>
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
-                    </button>
-                    <img src="~/images/logo.png" />
+                <div class="col-md-3">
+                    <div class="card">
+                        <span class="fa fa-id-card-o"></span>
+                        <h3>Zaloguj się</h3>
+                        <p>
+                            Uzyskaj dostęp do swojego panelu użytkownika, z poziomu którego możesz
+                            eksplorować SocialSwapa.
+                        </p>
+                    </div>
                 </div>
-                <div class="fixed-top-collapse collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-                    <ul class="nav navbar-nav navbar-right">
-                        <li class="home active"><a href="#">Home</a></li>
-                        <li class="about"><a href="#">About</a></li>
-                        <li class="services"><a href="#">MobileSwap</a></li>
-                        <li class="clients"><a href="#">Stats</a></li>
-                        <li class="stats"><a href="#">Team</a></li>
-                        <li class="contact"><a href="#">Contact</a></li>
-                    </ul>
-                </div><!-- /navbar-collapse -->
-            </div><!-- /container -->
-        </nav>
-    </div><!-- /container-fluid -->
+                <div class="col-md-3">
+                    <div class="card">
+                        <span class="fa fa-map-o"></span>
+                        <h3>Eksploruj SS</h3>
+                        <p>Wejdź w świat Swapów i szukaj interesujących Cię wymian, grup hobbystycznych organizowanych wydarzeń..<p>
+                    </div>
+                </div>
+                <div class="col-md-3">
+                    <div class="card">
+                        <span class="fa fa-picture-o"></span>
+                        <h3>Ogłaszaj</h3>
+                        <p>Buduj własną społeczność zamieszczając w SS własne propozycje wymian, zbieraj punkty, reputację i otrzymuj Swapowe wyróżnienia.</p>
+                    </div>
+                </div>
+                <div class="col-md-3">
+                    <div class="card">
+                        <span class="fa fa-globe"></span>
+                        <h3>Wyjdź na zewnątrz</h3>
+                        <p>Bierz udział w tematycznych eventach, poznawaj wspaniałych ludzi i wymieniaj się przedmiotami w klimatycznej atmosferze !</p>
+                    </div>
+                </div>
 
-    <div class="container">
-        <div class="banner-content">
-            <h2>Witaj w SocialSwap!</h2>
-            <p>Wymieniaj się, kolekcjonuj i poznawaj wspaniałych ludzi razem z nami...</p>
-        </div><!-- /banner-content -->
-    </div><!-- /container -->
-    <div class="container">
-        <div class="stamp text-center"></div>
-    </div><!-- /container -->
-</div><!-- /banner -->
-<!-- About -->
-<div class="about">
-</div>
+            </div>
+        </div>
+    </div>
 
-<script>
-            $(window).scroll(function() {
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+    <script src="js/bootstrap.min.js"></script>
+
+    <script>
+        var pageShowTime;
+
+        function showPageTimeout() {
+            pageShowTime = setTimeout(showPage, 3000);
+        }
+
+        function showPage() {
+            document.getElementById("loader").style.display = "none";
+            document.getElementById("content").style.display = "block";
+        }
+    </script>
+    <script>
+        $(window).scroll(function () {
             var scroll = $(window).scrollTop();
-            if (scroll >= 200) {
-                $(".about").addClass("active");
+            if (scroll >= 100) {
+                $(".nav-script").fadeOut(300);
+                $(".aboutnav").addClass("active");
                 $(".home").removeClass("active");
             }
-                else {
+            else {
                 $(".home").addClass("active");
-                $(".about").removeClass("active");
+                $(".aboutnav").removeClass("active");
+                $(".nav-script").fadeIn(400);
+
             }
 
-            if (scroll >= 0) {
-                $(".nav-script").addClass("navbar-fixed-top");
-                }
+            if (scroll >= 700) {
+                $(".sticky-nav-script").fadeIn(800);
+                $(".sticky-nav-script").addClass("navbar-fixed-top");
+                $(".sticky-nav-script").removeClass("unvisible");
+            }
             else {
-            $(".nav-script").removeClass("navbar-fixed-top");
+                $(".sticky-nav-script").fadeOut(200);
             }
         });
-</script>
+    </script>
+</div>
