--- a/git_test/Views/Shared/_Layout.cshtml
+++ b/git_test/Views/Shared/_Layout.cshtml
@@ -5,11 +5,12 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>@ViewBag.Title SocialSwap - platforma wymiany przedmiotów</title>
-    <link href="https://fonts.googleapis.com/css?family=Montserrat+Alternates:200,300,400|Montserrat+Subrayada|Montserrat:700&amp;subset=latin-ext" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Lato|Montserrat+Alternates|Montserrat:700|Poppins" rel="stylesheet">
+    <link href="~/Content/font-awesome.min.css" rel="stylesheet" />
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")
 </head>
-<body>
+<body onload="showPageTimeout();">
         @RenderBody()
 
     @Scripts.Render("~/bundles/jquery")
