--- a/git_test/Views/Home/Index.cshtml
+++ b/git_test/Views/Home/Index.cshtml
@@ -54,7 +54,7 @@
             <div class="banner-content">
                 <h2>Witaj w SocialSwap!</h2>
                 <p>Wymieniaj się, kolekcjonuj i poznawaj wspaniałych ludzi razem z nami...</p>
-                <a href="~/Views/Account/Register.cshtml"><button class="button"><span>Dołącz do nas!</span></button></a>
+                <button class="button">@Html.ActionLink("Dołącz do nas","Login","Account")</button>
             </div><!-- /banner-content -->
         </div><!-- /container -->
         <div class="container">
