--- a/git_test/Views/Shared/_Layout.cshtml
+++ b/git_test/Views/Shared/_Layout.cshtml
@@ -5,12 +5,12 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>@ViewBag.Title SocialSwap - platforma wymiany przedmiotów</title>
-    <link href="https://fonts.googleapis.com/css?family=Lato|Montserrat+Alternates|Montserrat:700|Poppins" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Lato:400,700|Montserrat+Alternates|Montserrat:700|Poppins" rel="stylesheet">
     <link href="~/Content/font-awesome.min.css" rel="stylesheet" />
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")
 </head>
-<body onload="showPageTimeout();">
+<body>
         @RenderBody()
 
     @Scripts.Render("~/bundles/jquery")
