--- a/git_test/Views/Home/Index.cshtml
+++ b/git_test/Views/Home/Index.cshtml
@@ -52,7 +52,7 @@
             <div class="banner-content">
                 <h2>Witaj w SocialSwap!</h2>
                 <p>Wymieniaj się, kolekcjonuj i poznawaj wspaniałych ludzi razem z nami...</p>
-                <button class="button">@Html.ActionLink("Dołącz do nas","Login","Account")</button>
+                <button class="button">@Html.ActionLink("Dołącz do nas","Register","Account")</button>
             </div><!-- /banner-content -->
         </div><!-- /container -->
         <div class="container">
