--- a/git_test/Views/Account/Register.cshtml
+++ b/git_test/Views/Account/Register.cshtml
@@ -1,4 +1,5 @@
-﻿@model git_test.Models.UserAccount
+﻿@using git_test.Models
+@model git_test.Models.UserAccount
 
 @{
     ViewBag.Title = "Register";
@@ -7,15 +8,15 @@
 <h2>Register</h2>
 
 
-@using (Html.BeginForm()) 
+@using (Html.BeginForm())
 {
     @Html.AntiForgeryToken()
-    
+
     <div class="form-horizontal">
         <h4>UserAccount</h4>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-        @if(ViewBag.Message != null)
+        @if (ViewBag.Message != null)
         {
             <div class="form-group">
                 <div class="col-md-10">@ViewBag.Message</div>
@@ -69,6 +70,57 @@
             </div>
         </div>
 
+        <div>
+            <input type="checkbox" value="1" id="HobbyA" />
+            <label for="HobbyA">HobbyA</label>
+            <input type="checkbox" value="2" id="HobbyB" />
+            <label for="HobbyB">HobbyB</label>
+            <input type="checkbox" value="3" id="HobbyC" />
+            <label for="hobby">HobbyC</label>
+            <input type="checkbox" value="4" id="HobbyD" />
+            <label for="hobby">HobbyD</label>
+            <input type="checkbox" value="5" id="HobbyE" />
+            <label for="hobby">HobbyE</label>
+        </div>
+
+       
+
+        @*@if (Html.Id("Hobby") != null)
+        {
+            string hobbie_d = "";
+            if (Convert.ToString(Html.Id("HobbyA")) == Convert.ToString(1))
+            {
+                hobbie_d += "1";
+            }
+            else { hobbie_d += "0"; }
+            if (Convert.ToString(Html.Id("HobbyB")) == Convert.ToString(2))
+            {
+
+                hobbie_d += "1";
+            }
+            else { hobbie_d += "0"; }
+            if (Convert.ToString(Html.Id("HobbyC")) == Convert.ToString(3))
+            {
+
+                hobbie_d += "1";
+            }
+            else { hobbie_d += "0"; }
+            if (Convert.ToString(Html.Id("HobbyD")) == Convert.ToString(4))
+            {
+
+                hobbie_d += "1";
+            }
+            else { hobbie_d += "0"; }
+            if (Convert.ToString(Html.Id("HobbyE")) == Convert.ToString(5))
+            {
+
+                hobbie_d += "1";
+            }
+            else { hobbie_d += "0"; }
+        }*@
+       
+        
+        
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
                 <input type="submit" value="Create" class="btn btn-default" />
