--- a/git_test/Views/Account/Login.cshtml
+++ b/git_test/Views/Account/Login.cshtml
@@ -32,7 +32,8 @@
 
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Create" class="btn btn-default" />
+                @*<input type="submit" value="Create" class="btn btn-default" />*@
+                <button class="btn btn-default">@Html.ActionLink("Login", "LoggedIn", "Account")</button>
             </div>
         </div>
     </div>
