--- a/git_test/Views/Account/Login.cshtml
+++ b/git_test/Views/Account/Login.cshtml
@@ -29,11 +29,9 @@
                 @Html.ValidationMessageFor(model => model.Password, "", new { @class = "text-danger" })
             </div>
         </div>
-
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
-                @*<input type="submit" value="Create" class="btn btn-default" />*@
-                <button class="btn btn-default">@Html.ActionLink("Login", "LoggedIn", "Account")</button>
+                <input type="submit" value="Create" class="btn btn-default" />
             </div>
         </div>
     </div>
