funkcja dodaj przedmiot
naprawa funkcji

--- a/git_test/Views/Account/LoggedIn.cshtml
+++ b/git_test/Views/Account/LoggedIn.cshtml
@@ -7,7 +7,7 @@
 {
     <h2>Witaj @Session["Username"].ToString()</h2>     
     <button>@Html.ActionLink("Wyloguj się","Logout")</button>
-
+    <button>@Html.ActionLink("Dodaj Przedmiot", "AddThing")</button>
 
 
 
