--- a/git_test/Views/Home/Index.cshtml
+++ b/git_test/Views/Home/Index.cshtml
@@ -219,9 +219,9 @@
                     <h3>socialswap<span>&commat;</span>gmail.com</h3>
                     <div class="smedia-wrapper">
                         <div class="smedia-center">
-                            <div class="smedia col-md-4"><a href="#"><span class="social-icon fa fa-facebook-square"></a></span></div>
-                            <div class="smedia col-md-4"><a href="#"><span class="social-icon fa fa-youtube-play"></a></span></div>
-                            <div class="smedia col-md-4"><a href="#"><span class="social-icon fa fa-snapchat"></a></span></div>
+                            <div class="smedia col-md-4"><a href="#"><span class="social-icon fa fa-facebook-square"></span></a></div>
+                            <div class="smedia col-md-4"><a href="#"><span class="social-icon fa fa-youtube-play"></span></a></div>
+                            <div class="smedia col-md-4"><a href="#"><span class="social-icon fa fa-snapchat"></span></a></div>
                         </div>
                     </div>
                 </div>
