--- a/git_test/Views/Shared/_Layout.cshtml
+++ b/git_test/Views/Shared/_Layout.cshtml
@@ -9,6 +9,7 @@
     <link href="~/Content/font-awesome.min.css" rel="stylesheet" />
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")
+    <meta name="description" content="The description of my page" />
 </head>
 <body>
         @RenderBody()
